Adding a new component

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <!-- Runs custom element -->
     <hello-world who="Unicorn"></hello-world>
+    <login-form email_placeholder="email@site.com"></login-form>
 
 </body>
 </html>
